Adding hotel entity
